# windows_sound_tracker

./: .gitignore  CMakeLists.txt  LICENSE  RCa46016  README.md  SoundTracker.manifest  SoundTracker.rc  build_release.bat  installer.nsi  resource.h
include/: AudioEvent.h  Logger.h  SoundTracker.h  SoundTrackerGUI.h
src/: Logger.cpp  SoundTracker.cpp  SoundTrackerGUI.cpp  main_gui.cpp
